--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ draft
 
 03_Day_Setting_Up/30-days-of-react/debug.log
 03_Day_Setting_Up/30-days-of-react/.vscode/launch.json
+03_Day_Setting_Up/30-days-of-react/try.http
